--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.google.firebase:firebase-core:9.8.0'
+    compile 'com.google.firebase:firebase-messaging:9.8.0'
 }
 
+// Add to the bottom of the file
 apply plugin: 'com.google.gms.google-services'
